# ADVENS_SIMULATION

./: .gitignore  BasicESmain.cpp  CMakeLists.txt  Esta_NEW_pipes2.csv  Hoodmain.cpp  PrepareDatabase.cpp  QNetworkmain.cpp  TourDe.csv  TourDe2.csv  example.cpp  example2.cpp  exchdata.txt  exchmain.cpp  exchparam.txt  exchrslts.txt  expdata.txt  expmain.cpp  expparam.txt  fluids.cpp  fluidsMethod.cpp  gasettings.txt  hydraulicmain.cpp  iomain.cpp  mxdata.txt  mxrslts.txt  mxxrslts.txt  mxxxrslts.txt  quickcopy.cpp  reseau_thermique_clean_advens.gpkg  testCoolProp.cpp  testGeo.cpp  testJamil.cpp  testcomposant.cpp  testnetwork.cpp
ADVENS_Fluid/: app.py  cli.py  cli.spec  cli_onefile.spec
BasicEnergySystem/: BasicES.cpp  BasicES.h
BasicEnergySystem/exchanger/: TDryCooler.cpp  TDryCooler.h  TExchanger.cpp  TExchanger.h  TPlate.cpp  TPlate.h  TTubular.cpp  TTubular.h  param_signif.txt  pipes.cpp  pipes.h  rslts.txt
BasicEnergySystem/heatpump/: THeatpump.cpp  THeatpump.h
BasicEnergySystem/hydraulic/: HPump.cpp  HPump.h  HValve.cpp  HValve.h
BasicEnergySystem/pipe/: HBendPipe.cpp  HBendPipe.h  HPipe.cpp  HPipe.h  Hydraulic.cpp  Hydraulic.h
BasicEnergySystem/turbine/: expander.cpp  expander.h  expdata.txt  expparam.txt  turbine.cpp  turbine.h
Cases/Esta_NEW/: Esta_NEW.csv  Esta_NEW_SST.csv  Esta_NEW_SST_dT.csv  Esta_NEW_SST_demand.csv  Esta_NEW_SST_old.csv  Esta_NEW_diam.csv  Esta_NEW_length.csv  Esta_NEW_meteo.csv  Esta_NEW_settings.txt
Cases/Exercice1/: Exercice1.csv  Exercice1_SST.csv  Exercice1_pipes.csv  Exercice1_settings.txt  Exercice1a_SST.csv  Exercice1a_diam.csv  Exercice1a_length.csv  Exercice1a_settings.txt
Cases/Exercice2/: Exercice2_diam.csv  Exercice2_meteo.csv  Exercice2_settings.txt  Exercice2a.csv  Exercice2a_HP.csv  Exercice2a_length.csv  Exercice2a_settings.txt
Cases/MVP/: Esta_NEW_settings.txt  QuantumizedNetwork.gpkg  test2_SST.csv
Cases/Projet/: Projet1.csv  Projet1_HP.csv  Projet1_SST.csv  Projet1_diam.csv  Projet1_length.csv  Projet1_meteo.csv  Projet1_pipes.csv  Projet1_settings.txt
Cases/SSSL/: BT.csv  BT_SST.csv  BT_diam.csv  BT_length.csv  BT_settings.txt  HT.csv  HT_SST.csv  HT_diam.csv  HT_length.csv  HT_meteo.csv  HT_settings.txt
EPANET/CLI/: run-epanet3.exe.stackdump
EPANET/Core/: datamanager.cpp  diagnostics.cpp  epanet3.cpp  hydbalance.cpp  hydengine.cpp  network.cpp  network.h  options.cpp  options.h  project.cpp  project.h  qualbalance.cpp  qualengine.cpp  units.h
EPANET/Elements/: control.cpp  control.h  curve.cpp  curve.h  emitter.cpp  junction.cpp  junction.h  link.cpp  link.h  node.cpp  node.h  pattern.cpp  pattern.h  pipe.cpp  pipe.h  pump.cpp  pump.h  pumpcurve.cpp  qualsource.cpp  reservoir.cpp  reservoir.h  tank.cpp  tank.h  valve.cpp  valve.h
EPANET/Input/: controlparser.cpp  curveparser.cpp  inputparser.cpp  inputparser.h  inputreader.cpp  linkparser.cpp  nodeparser.cpp  optionparser.cpp  patternparser.cpp
EPANET/Models/: demandmodel.cpp  headlossmodel.cpp  leakagemodel.cpp  pumpenergy.cpp  qualmodel.cpp  tankmixmodel.cpp
EPANET/Output/: outputfile.cpp  outputfile.h  projectwriter.cpp  reportfields.cpp  reportwriter.cpp
EPANET/Solvers/: ggasolver.cpp  ggasolver.h  ltdsolver.cpp  ltdsolver.h  (+1 more)
Flow/: Flow.cpp  Flow.h  FlowPhaseChange.cpp  FlowPhaseChange.h  Flow_physic.cpp  Flow_physic.h
Python/: main.py  mypdf.py  myplotting.py  temp-plot.html
consumer/: Building.cpp  Building.h  District.cpp  District.h  ECS.txt  Ener_env.cpp  Ener_env.h  EnergieBat_calcul.txt  EnergieBat_norm.txt  Norm_Building.cpp  Norm_Building.h  input_file.cpp  input_file.h  solar.cpp  solar.h  sst.cpp  sst.h
dataBase/: DataFluids.txt  ECS.txt  Meteo_Fribourg.txt  PipePropreties.txt  Pipe_Brugg_2.txt  Posieux_irr.txt  Posieux_irr_diff.txt  Posieux_irr_glob.txt  Posieux_kelvin.txt  Posieux_ray.txt  TempMoy.txt  diff_irr.txt  pluie.txt
db_connect/: DBConnection.cpp  DBConnection.h
environment/: environment.cpp  environment.h
fluids/: ExtCoolProp.cpp  ExtCoolProp.h  FluidCore.cpp  FluidCore.h  FluidState.cpp  FluidState.h  GestionFichiers.cpp  GestionFichiers.h  LK.cpp  LK.h  LeeK1.cpp  LeeK1.h  LeeKessler.cpp  LeeKessler.h  MWater.cpp  MWater.h  PRR.cpp  PRR.h  PengRobinson.cpp  PengRobinson.h  estimation.cpp  estimation.h
gao/: gaiodata.cpp  gaiodata.h  gao.cpp  gao.h  gasettings.txt  makefile
geodata/: GeoCoord.cpp  GeoCoord.h  GeoDataset.cpp  GeoDataset.h  GeoFactorTrack.cpp  GeoFactorTrack.h  GeoGraph.cpp  GeoGraph.h  GeoReadTrack.cpp  GeoReadTrack.h  GeoRoutingTrack.cpp  GeoRoutingTrack.h  GeoTrack.cpp  GeoTrack.h  Pixelation.cpp  Pixelation.h  QGraph.cpp  QGraph.h
hydraulic/: EPANETValve.cpp  EPANETValve.h  HPipe.cpp  HPipe.h  HValve.cpp  HValve.h  Hydraulic.h  PipeData.txt
iofile/: Central.csv  Central.csv.bak  Central_connexion.csv  Central_network.csv  Central_network_avec desciption.csv  Network.csv  Network.xlsx  Network_config.csv  Network_config_old.xlsx  Network_pipe.csv  Network_sst.csv  Network_sst_old.csv  array.h  bissection.cpp  data.txt  dynstring.h  dynstrmain.cpp  gasettings.txt  iofdata.in  iofdata.txt  iofdata2.in  iofdata2.txt  ioffld1.out  ioffld2.out  iofile.cpp  iofile.h  iofile_test.cbp  iofile_test.depend  iofile_test.layout  iofilecsv.cpp  iofilecsv.h  iofrcd1.out  iofrcd2.out  iomain.cpp  main.cpp  secante.cpp  solvers.h  vs-iofile.sln  vs-iofile.vcxproj  vs-iofile.vcxproj.filters
math/: maths.cpp  maths.h
mex/: ADVENS_Props.cpp  CentraleVapeur.mlx  CentraleVapeur_Solution.mlx  Introduction.mlx  Introduction_Solution.mlx  PAC.mlx  PAC_Solution.mlx  Test.m  Ts_diagram.m  logPh_diagram.m  mex_compile.m  mex_test.cpp
network/: QNetwork.cpp  QNetwork.h  Quantum.cpp  Quantum.h  TBranch.cpp  TBranch.h  TCentralPlant.cpp  TCentralPlant.h  TConnec.cpp  TConnec.h  TElectron.cpp  TElectron.h  TElectronHP.cpp  TElectronHP.h  TNeutron.cpp  TNeutron.h  TProton.cpp  TProton.h  TSegment.cpp  TSegment.h  network.cpp  network.h
state/: TPhysicState.cpp  TPhysicState.h  TSonicState.cpp  TSonicState.h  TSonicState_LK.cpp  TSonicState_LK.h  TState.cpp  TState.h  TThermoState.cpp  TThermoState.h
(+91 files in other folders)
